<resources>
    <string name="app_name">Registration App</string>
    <string name="login_button">Login</string>
    <string name="cancel_button">Cancel</string>
    <string name="name">Name: </string>
    <string name="password">Password: </string>
    <string name="greetings">Welcome to Adventure Learning Club!</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="student_id">Student ID</string>
    <string name="school">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
</resources>